--- a/templates/home.html
+++ b/templates/home.html
@@ -53,7 +53,7 @@
                                 <select name="search_type" class="search-dropdown" onchange="this.form.submit()">
                                     <option {% if search == 'Context Search' %}selected{% endif %} value="Context Search">Context Search</option>
                                     <option {% if search == 'Hybrid Search' %}selected{% endif %} value="Hybrid Search">Hybrid Search</option>
-                                    <!-- <option {% if search == 'TFIDF Search' %}selected{% endif %} value="TFIDF Search">TFIDF Search</option> -->
+                                    <option {% if search == 'TFIDF Search' %}selected{% endif %} value="TFIDF Search">TFIDF Search</option>
                                 </select>
                             </form>
 
